@@ -25,6 +25,7 @@ Daniel R. (r1chelt)
 Daniel Dettlaff (dmilith)
 Daniel Polanco (dlpolanco)
 Denis Protivenskiy
+Dennis Hamester
 Egor Gumenyuk (boo1ean)
 Factorial Prime
 filterfalse
