@@ -160,6 +160,9 @@
 	Fixed unintentional filters resetting on menu navigation to paths that
 	have trailing slash.
 
+	Fixed losing name of controlling terminal on reopening it.  Thanks to
+	Dennis Hamester.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
